--- a/app/index.html
+++ b/app/index.html
@@ -5,16 +5,95 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Фитнес зал "Ваше название"</title>
 </head>
 <body>
     <header>
-        header
+        <div class="navigation">
+            <div class="logo"></div>
+            <div class="menu">
+                <ul class="list">
+                    <li class="item">
+                        <a href="" class="link">О нас</a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">Галерея</a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">Абонементы</a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">Тренеры</a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">Контакты</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="phone">
+                <a href="tel:+74964161916">+7 (496) 416-19-16</a>
+            </div>
+        </div>
+        <div class="prev">
+            <h1 class="header-text">Фитнес клуб Пантеон</h1>
+            <p class="header-description">Лучше нас только боги</p>
+            <a href="#" class="btn-info">Получить консультацию</a>
+        </div>
+        <div class="social">
+            <ul class="list">
+                <li class="item">
+                    <a href="" class="link">
+                        <img src="img/fontisto_instagram.svg" alt="">
+                    </a>
+                </li>
+                <li class="item">
+                    <a href="" class="link">
+                        <img src="img/fontisto_vk.svg" alt="">
+                    </a>
+                </li>
+            </ul>
+        </div>
     </header>
 
 
 <main>
-    main
+    <section class="new-live">
+        <div class="new-left-block">
+            <ul class="list">
+                <li class="item">
+                    <img src="img/pexels-cottonbro-7675416.webp" alt="">
+                </li>
+                <li class="item">
+                    <img src="../img/pexels-leon-ardho-1552252.webp" alt="">
+                </li>
+            </ul>
+        </div>
+        <div class="new-right-block">
+            <h2 class="info">Новый образ жизни</h2>
+            <p class="description">Став частью нашей команды, вы сможете изменить привычный ритм жизни и сделать каждый свой день особенным, а формат наших тренировок позволит вам раскрыть потенциал вашего тела на 100%.</p>
+            <a href="#" class="btn-consultant">Получить консультацию</a>
+        </div>
+        <div class="new-icon">
+            <ul class="list">
+                <li class="item">
+                    <img src="" alt="">
+                    <span>Полностью укомплектованный зал</span>
+                </li>
+                <li class="item">
+                    <img src="" alt="">
+                    <span>Профессиональное оборудование</span>
+                </li>
+                <li class="item">
+                    <img src="" alt="">
+                    <span>Удобное расположение в центре города</span>
+                </li>
+                <li class="item">
+                    <img src="" alt="">
+                    <span>Доступная стоимость занятий</span>
+                </li>
+            </ul>
+        </div>
+    </section>
 </main>
 
 <footer>
