--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -1,7 +1,43 @@
 <!--=include header.html -->
 
 <main>
-    main
+    <section class="new-live">
+        <div class="new-left-block">
+            <ul class="list">
+                <li class="item">
+                    <img src="img/pexels-cottonbro-7675416.webp" alt="">
+                </li>
+                <li class="item">
+                    <img src="../img/pexels-leon-ardho-1552252.webp" alt="">
+                </li>
+            </ul>
+        </div>
+        <div class="new-right-block">
+            <h2 class="info">Новый образ жизни</h2>
+            <p class="description">Став частью нашей команды, вы сможете изменить привычный ритм жизни и сделать каждый свой день особенным, а формат наших тренировок позволит вам раскрыть потенциал вашего тела на 100%.</p>
+            <a href="#" class="btn-consultant">Получить консультацию</a>
+        </div>
+        <div class="new-icon">
+            <ul class="list">
+                <li class="item">
+                    <img src="" alt="">
+                    <span>Полностью укомплектованный зал</span>
+                </li>
+                <li class="item">
+                    <img src="" alt="">
+                    <span>Профессиональное оборудование</span>
+                </li>
+                <li class="item">
+                    <img src="" alt="">
+                    <span>Удобное расположение в центре города</span>
+                </li>
+                <li class="item">
+                    <img src="" alt="">
+                    <span>Доступная стоимость занятий</span>
+                </li>
+            </ul>
+        </div>
+    </section>
 </main>
 
 <!--=include footer.html -->
