--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -20,23 +20,147 @@
         <div class="new-icon">
             <ul class="list">
                 <li class="item">
-                    <img src="" alt="">
+                    <img src="img/stationary-bike.svg" alt="">
                     <span>Полностью укомплектованный зал</span>
                 </li>
                 <li class="item">
-                    <img src="" alt="">
+                    <img src="img/dumbbell.svg" alt="">
                     <span>Профессиональное оборудование</span>
                 </li>
                 <li class="item">
-                    <img src="" alt="">
+                    <img src="img/location (7).svg" alt="">
                     <span>Удобное расположение в центре города</span>
                 </li>
                 <li class="item">
-                    <img src="" alt="">
+                    <img src="img/wallet.svg" alt="">
                     <span>Доступная стоимость занятий</span>
                 </li>
             </ul>
         </div>
+    </section>
+    <section class="gallery">
+        <div class="slider-trener">
+            <div class="btl-left"></div>
+            <ul class="list">
+                <li class="item"><a href="" class="link"><img src="../img/STK_6966ф.avif" alt="" class="foto"></a></li>
+                <li class="item"><a href="" class="link"><img src="../img/STK_7858.avif" alt="" class="foto"></a></li>
+                <li class="item"><a href="" class="link"><img src="../img/STK_7899.avif" alt="" class="foto"></a></li>
+                <li class="item"><a href="" class="link"><img src="../img/5382ф.avif" alt="" class="foto"></a></li>
+                <li class="item"><a href="" class="link"><img src="../img/STK_6966ф.avif" alt="" class="foto"></a></li>
+                <li class="item"><a href="" class="link"><img src="../img/STK_7858.avif" alt="" class="foto"></a></li>
+                <li class="item"><a href="" class="link"><img src="../img/STK_7899.avif" alt="" class="foto"></a></li>
+                <li class="item"><a href="" class="link"><img src="../img/5382ф.avif" alt="" class="foto"></a></li>
+            </ul>
+            <div class="btl-right"></div>
+        </div>
+        <div class="slider-sportzal">
+            <div class="btl-left"></div>
+            <ul class="list">
+                <li class="item"><a href="" class="link"><img src="../img/vladimirbelov1.avif" alt="" class="foto"></a></li>
+                <li class="item"><a href="" class="link"><img src="../img/vladimirbelov2.avif" alt="" class="foto"></a></li>
+                <li class="item"><a href="" class="link"><img src="../img/vladimirbelov3.avif" alt="" class="foto"></a></li>
+                <li class="item"><a href="" class="link"><img src="../img/vladimirbelov1.avif" alt="" class="foto"></a></li>
+                <li class="item"><a href="" class="link"><img src="../img/vladimirbelov2.avif" alt="" class="foto"></a></li>
+                <li class="item"><a href="" class="link"><img src="../img/vladimirbelov3.avif" alt="" class="foto"></a></li>
+                <li class="item"><a href="" class="link"><img src="../img/vladimirbelov1.avif" alt="" class="foto"></a></li>
+                <li class="item"><a href="" class="link"><img src="../img/vladimirbelov2.avif" alt="" class="foto"></a></li>
+            </ul>
+            <div class="btl-right"></div>
+        </div>
+    </section>
+    <section class="aboniment">
+        <div class="aboniment-table">
+            <ul class="table-list">
+                <li class="table-item">
+                    <ul class="stroka-list">
+                        <li class="stroka-item">
+                            <p class="yacheika-text">Кол-во занятий</p>
+                        </li>
+                        <li class="stroka-item">
+                            <p class="yacheika-text"> 1 тренировка</p>
+                        </li>
+                        <li class="stroka-item">
+                            <p class="yacheika-text"> 4 тренировки</p>
+                        </li>
+                        <li class="stroka-item">
+                            <p class="yacheika-text">8 тренировок</p>
+                        </li>
+                        <li class="stroka-item">
+                            <p class="yacheika-text">12 тренировок</p>
+                        </li>
+                    </ul>
+                </li>
+                <li class="table-item">
+                    <ul class="stroka-list">
+                        <li class="stroka-item">
+                            <p class="yacheika-text">Персональный тренинг<br>
+                                с инструктором</p>
+                        </li>
+                        <li class="stroka-item">
+                            <p class="yacheika-text">700 руб.</p>
+                        </li>
+                        <li class="stroka-item">
+                            <p class="yacheika-text">2600 руб.<br>
+                                (действителен в<br> течении 3 недель)</p>
+                        </li>
+                        <li class="stroka-item">
+                            <p class="yacheika-text">5200 руб.<br>
+                                (действителен в<br>
+                                течении 6 недель)</p>
+                        </li>
+                        <li class="stroka-item">
+                            <p class="yacheika-text">7200 руб.<br>
+                                (действителен в<br>
+                                течении 10 недель)</p>
+                        </li>
+                    </ul>
+                </li>
+                <li class="table-item">
+                    <ul class="stroka-list">
+                        <li class="stroka-item">
+                            <p class="yacheika-text">Самостоятельные тренировки<br>
+                                в тренажерном зале</p>
+                        </li>
+                        <li class="stroka-item">
+                            <p class="yacheika-text">250 руб.</p>
+                        </li>
+                        <li class="stroka-item">
+                            <p class="yacheika-text">—</p>
+                        </li>
+                        <li class="stroka-item">
+                            <p class="yacheika-text">1500 руб.<br>
+                                (действителен в<br> течении 30 дней)</p>
+                        </li>
+                        <li class="stroka-item">
+                            <p class="yacheika-text">2000 руб.<br>
+                                (действителен в<br>
+                                течении 30 дней)</p>
+                        </li>
+                    </ul>
+                </li>
+                <li class="table-item">
+                    <ul class="stroka-list">
+                        <li class="stroka-item">
+                            <p class="yacheika-text">Зал групповых<br> программ</p>
+                        </li>
+                        <li class="stroka-item">
+                            <p class="yacheika-text">300 руб.</p>
+                        </li>
+                        <li class="stroka-item">
+                            <p class="yacheika-text">—</p>
+                        </li>
+                        <li class="stroka-item">
+                            <p class="yacheika-text">2000 руб.<br>
+                                действителен в<br>
+                                течении 30 дней</p>
+                        </li>
+                        <li class="stroka-item">
+                            <p class="yacheika-text">2750 руб.<br>
+                                (действителен в<br> течении 45 дней)</p>
+                        </li>
+                    </ul>
+                </li>
+            </ul>      </div>
     </section>
 </main>
 
