--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -202,100 +202,111 @@
         </div>
     </section>
     <section class="trener">
-        <div class="trener-block">
-            <h4 class="trener-info">Тренеры</h4>
-            <div class="slider">
-                <ul class="list">
-                    <li class="item">
-                        <img src="img/5407ф.webp" alt="">
-                        <p class="trener-name">Илья Панченко</p>
-                        <p class="trener-personal">Персональный тренер<br>Инструктор тренажерного зала<br>Опыт работы — 4 года</p>
-                    </li>
-                    <li class="item">
-                        <img src="img/5371ф.webp" alt="">
-                        <p class="trener-name">Екатерина Сосина-Нуньес</p>
-                        <p class="trener-personal">Фитнес-тренер<br>Опыт работы — 4 года</p>
-                    </li>
-                    <li class="item">
-                        <img src="img/5405ф.webp" alt="">
-                        <p class="trener-name">Юлия Белова</p>
-                        <p class="trener-personal">Фитнес-тренер<br>Опыт работы — 4 года</p>
-                    </li>
-                    <li class="item">
-                        <img src="" alt="">
-                        <p class="trener-name">Михаил А</p>
-                        <p class="trener-personal">Фитнес-тренер<br>Опыт работы — 2 года</p>
-                    </li>
-                    <li class="item">
-                        <img src="img/5407ф.webp" alt="">
-                        <p class="trener-name">Екатерина Сосина-Нуньес</p>
-                        <p class="trener-personal">Фитнес-тренер<br>Опыт работы — 4 года</p>
-                    </li>
-                    <li class="item">
-                        <img src="img/5405ф.webp" alt="">
-                        <p class="trener-name">Юлия Белова</p>
-                        <p class="trener-personal">Фитнес-тренер<br>Опыт работы — 2 года</p>
-                    </li>
-                </ul>
-                <div class="slider-btn">
-                    <a href="#" class="btn-left"><img src="img/arrow-left.svg" alt=""></a>
-                    <a href="#" class="btn-right"><img src="img/arrow-right.svg" alt=""></a>
+        <div class="container">
+            <div class="trener-block">
+                <h4 class="trener-info">Тренеры</h4>
+                <div class="slider">
+                    <ul class="list">
+                        <li class="item">
+                            <img src="img/5407ф.webp" alt="">
+                            <p class="trener-name">Илья Панченко</p>
+                            <p class="trener-personal">Персональный тренер<br>Инструктор тренажерного зала<br>Опыт работы — 4 года</p>
+                        </li>
+                        <li class="item">
+                            <img src="img/5371ф.webp" alt="">
+                            <p class="trener-name">Екатерина Сосина-Нуньес</p>
+                            <p class="trener-personal">Фитнес-тренер<br>Опыт работы — 4 года</p>
+                        </li>
+                        <li class="item">
+                            <img src="img/5405ф.webp" alt="">
+                            <p class="trener-name">Юлия Белова</p>
+                            <p class="trener-personal">Фитнес-тренер<br>Опыт работы — 4 года</p>
+                        </li>
+                        <li class="item">
+                            <img src="img/5371ф.webp" alt="">
+                            <p class="trener-name">Михаил А</p>
+                            <p class="trener-personal">Фитнес-тренер<br>Опыт работы — 2 года</p>
+                        </li>
+                        <li class="item">
+                            <img src="img/5407ф.webp" alt="">
+                            <p class="trener-name">Екатерина Сосина-Нуньес</p>
+                            <p class="trener-personal">Фитнес-тренер<br>Опыт работы — 4 года</p>
+                        </li>
+                        <li class="item">
+                            <img src="img/5405ф.webp" alt="">
+                            <p class="trener-name">Юлия Белова</p>
+                            <p class="trener-personal">Фитнес-тренер<br>Опыт работы — 2 года</p>
+                        </li>
+                    </ul>
+                    <div class="slider-btn">
+                        <a href="" class="btn-left"><svg width="40" height="41" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M37.5 22.038a1.25 1.25 0 00-1.25-1.25H6.768l7.867-7.865a1.25 1.25 0 000-1.77 1.252 1.252 0 00-1.77 0l-10 10a1.25 1.25 0 000 1.77l10 10a1.251 1.251 0 101.77-1.77l-7.867-7.865H36.25a1.25 1.25 0 001.25-1.25z" /></svg>
+                        </a>
+                        <a href="" class="btn-right"><svg width="40" height="41" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M2.5 20.5a1.25 1.25 0 001.25 1.25h29.483l-7.868 7.865a1.25 1.25 0 101.77 1.77l10-10a1.249 1.249 0 000-1.77l-10-10a1.252 1.252 0 00-1.77 1.77l7.868 7.865H3.75A1.25 1.25 0 002.5 20.5z" />
+                        </svg></a>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="question">
-        <img src="img/pexels-ivan-samkov-4164520.webp" alt="">
-        <div class="contakts-block">
-            <h4 class="question-info">Остались вопросы?</h4>
-            <p class="question-form-text">Оставьте Ваш номер телефона
-                и мы обязательно с Вами свяжемся</p>
-            <form action="" method="get">
-                <label for="">
-                    <input type="text-name" name="name" id="">
-                </label>
-                <label for="">
-                    <input type="text-phone" name="phone" id="">
-                </label>
-                <button>Получить консультацию</button>
-                <p class="question-help">Нажимая на кнопку вы соглашаетесь с политикой конфиденциальности</p>
-            </form>
+    <div class="container">
+        <section class="question">
+            <div class="question-block">
+                <img src="img/pexels-ivan-samkov-4164520.webp" alt="">
+                <div class="contakts-block">
+                    <h4 class="question-info">Остались вопросы?</h4>
+                    <p class="question-form-text">Оставьте Ваш номер телефона</p>
+                    <p class="question-form-text">и мы <span>обязательно с Вами свяжемся</span></p>
+                    <form action="" method="get">
+                        <label for="">
+                            <input type="text-name" name="name" id="" placeholder="Введите имя">
+                        </label>
+                        <label for="">
+                            <input type="text-phone" name="phone" id="" placeholder="Введите телефон">
+                        </label>
+                        <button>Получить консультацию</button>
+                        <p class="question-help">Нажимая на кнопку вы соглашаетесь с политикой конфиденциальности</p>
+                    </form>
+                </div>
+            </div>
         </div>
     </section>
     <section class="map">
-        <img src="img/image 6.webp" alt="">
-        <div class="map-block">
-            <h4 class="contakts-text">Контакты</h4>
-            <ul class="list">
-                <li class="item">
-                    <img src="" alt="">
-                    <p>г. Орехово-Зуево, ул. Ленина 84</p>
-                </li>
-                <li class="item">
-                    <img src="" alt="">
-                    <p>Ежедневно с 8:00 до 23:00
-                    </p>
-                </li>
-                <li class="item">
-                    <img src="" alt="">
-                    <p>+7 (496) 416-19-16,<br>
-                        +7 (925) 881-21-70
+        <div class="map-content">
+            <img src="img/image 6.webp" alt="">
+            <div class="map-block">
+                <h4 class="contakts-text">Контакты</h4>
+                <ul class="list">
+                    <li class="item">
+                        <img src="img/location (13) 1.svg" alt="">
+                        <p>г. Орехово-Зуево, ул. Ленина 84</p>
+                    </li>
+                    <li class="item">
+                        <img src="img/clock (17).svg" alt="">
+                        <p>Ежедневно с 8:00 до 23:00
                         </p>
-                </li>
-            </ul>
-            <p class="contakts-subscription">Подписывайтесь на наши соц.сети</p>
-            <svg width="23" height="22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <g clip-path="url(#clip0_406_293)"><path d="M14.669 11v-.001a3.667 3.667 0 10-1.075 2.593 3.522 3.522 0 001.075-2.537l-.001-.058V11zm1.98 0A5.624 5.624 0 1115 7.004a5.428 5.428 0 011.649 3.902l-.001.1V11zm1.546-5.872v.002a1.32 1.32 0 11-.387-.934c.235.23.38.551.38.906v.027-.001h.007zm-7.187-3.154l-1.095-.007a75.92 75.92 0 00-1.512 0c-.344.005-.804.02-1.382.043-.536.018-1.045.072-1.543.156l.067-.01c-.39.065-.735.157-1.066.279l.04-.013a3.774 3.774 0 00-2.083 2.066l-.01.025a5.477 5.477 0 00-.26.992l-.004.034c-.082.482-.13.969-.146 1.457v.02a53.974 53.974 0 00-.044 1.381c-.005.344-.005.848 0 1.512l.007 1.095L1.97 12.1a75.907 75.907 0 000 1.511c.005.344.02.805.043 1.383.018.536.072 1.045.156 1.543l-.01-.067c.065.39.157.735.279 1.066l-.013-.04A3.774 3.774 0 004.49 19.58l.025.01c.291.108.637.2.992.26l.034.004c.43.075.939.128 1.456.146h.02c.577.024 1.038.039 1.382.044.343.005.847.005 1.511 0l1.09-.022 1.095.007c.663.005 1.167.005 1.511 0 .344-.005.805-.02 1.383-.043a11.536 11.536 0 001.542-.156l-.067.01c.39-.065.736-.156 1.066-.278l-.039.012a3.775 3.775 0 002.083-2.066l.009-.024c.109-.292.2-.637.26-.993l.005-.034c.075-.43.128-.939.145-1.456l.001-.019a54.17 54.17 0 00.043-1.382c.005-.344.005-.848 0-1.512l-.007-1.095.008-1.096c.004-.664.004-1.168 0-1.511-.005-.344-.02-.805-.044-1.383a11.536 11.536 0 00-.155-1.542l.009.066a5.736 5.736 0 00-.278-1.066l.013.04a3.774 3.774 0 00-2.066-2.083l-.025-.009a5.477 5.477 0 00-.993-.26l-.034-.005a10.78 10.78 0 00-1.456-.146h-.019a53.976 53.976 0 00-1.382-.044 75.907 75.907 0 00-1.512 0l-1.089.021zM22.002 11c0 2.186-.024 3.7-.073 4.54a6.085 6.085 0 01-6.403 6.387l.014.001c-.84.05-2.353.074-4.54.074-2.186 0-3.7-.025-4.54-.074a6.088 6.088 0 01-6.387-6.403l-.001.015c-.05-.84-.074-2.354-.074-4.54 0-2.187.025-3.7.074-4.54A6.087 6.087 0 016.475.072H6.46C7.3.021 8.814-.003 11-.003c2.187 0 3.7.024 4.54.073a6.087 6.087 0 016.388 6.403V6.46c.05.84.074 2.353.074 4.54z" fill="#F7931E"/>
-                </g><defs><clipPath id="clip0_406_293"><path transform="translate(.002)" d="M0 0h22v22H0z"/></clipPath></defs>
-            </svg>
-            <svg width="31" height="30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <g clip-path="url(#clip0_406_291)">
-                    <path d="M29.322 7.23a10.757 10.757 0 01-1.363 2.824l.024-.038a149.62 149.62 0 01-2.006
-                    3.235c-.667.966-1.02 1.466-1.059 1.5a1.6 1.6 0 00-.334.773v.008c.03.255.15.491.334.67l.5.557c2.675 2.749 4.18
-                    4.644 4.514 5.685a1.114 1.114 0 01-.14 1.036l.002-.004a1.207 1.207 0 01-.98.361h.005-3.295c-.42 0-.808-.147-1.112-.392l.004.002a8.661 8.661 0 01-1.19-1.185l-.01-.015a36.92 36.92 0 00-1.533-1.643c-1.485-1.412-2.58-2.118-3.287-2.118a.985.985 0 00-.645.169l.003-.003a.958.958 0 00-.2.73v-.005a15.645 15.645 0 00-.047 1.754v-.021 1.449a.975.975 0 01-.333.946v.001a3.974 3.974 0 01-2.022.334l.016.001a10.403 10.403 0 01-5.344-1.585l.044.025a14.914 14.914 0 01-4.646-4.406l-.034-.053a32.951 32.951 0 01-3.089-4.99l-.087-.192A30.824 30.824 0 01.47 9.137l-.075-.23a8.308 8.308 0 01-.388-1.92l-.002-.03c0-.633.371-.948 1.115-.948h3.287c.332-.026.662.074.924.28l-.003-.002c.25.274.435.61.527.985l.003.015a31.774 31.774 0 001.984 4.52l-.084-.172a18.2 18.2 0 002.03 3.22l-.03-.039c.667.818 1.187 1.228 1.56 1.228h.04a.5.5 0 00.434-.25l.001-.002c.12-.313.167-.65.14-.983v.007-4.849a4.014 4.014 0 00-.4-1.583l.01.023a3.695 3.695 0 00-.563-.868l.003.005a1.369 1.369 0 01-.388-.774l-.002-.008c0-.212.098-.403.25-.528l.002-.002a.848.848 0 01.575-.222h5.192a.793.793 0 01.699.277l.001.002a1.7 1.7 0 01.199.953v-.006 6.466c-.02.255.04.51.17.73l-.003-.005a.5.5 0 00.417.223c.212-.014.415-.084.59-.203l-.004.003c.34-.234.632-.5.886-.801l.005-.007a19.514 19.514 0 002.069-2.812l.049-.088c.43-.712.895-1.59 1.316-2.49l.077-.185.558-1.115a1.402 1.402 0 011.396-.948h-.004 3.29c.887 0 1.22.408 1 1.226h-.002z" fill="#F7931E"/>
-                </g><defs><clipPath id="clip0_406_291">
-                    <path fill="#F7931E" transform="translate(.002)" d="M0 0h30v30H0z"/></clipPath></defs>
-                </svg>
+                    </li>
+                    <li class="item">
+                        <img src="img/phone (1).svg" alt="">
+                        <p>+7 (496) 416-19-16,<br>
+                            +7 (925) 881-21-70
+                            </p>
+                    </li>
+                </ul>
+                    <p class="contakts-subscription">Подписывайтесь на наши соц.сети</p>
+                <div class="map-social">
+                    <a class="link" href="" class="link">
+                        <svg width="22" height="22"  xmlns="http://www.w3.org/2000/svg">
+                            <path d="M14.669 11v-.001a3.667 3.667 0 10-1.075 2.593 3.522 3.522 0 001.075-2.537l-.001-.058V11zm1.98 0A5.624 5.624 0 1115 7.004a5.428 5.428 0 011.649 3.902l-.001.1V11zm1.546-5.872v.002a1.32 1.32 0 11-.387-.934c.235.23.38.551.38.906v.027-.001h.007zm-7.187-3.154l-1.095-.007a75.92 75.92 0 00-1.512 0c-.344.005-.804.02-1.382.043-.536.018-1.045.072-1.543.156l.067-.01c-.39.065-.735.157-1.066.279l.04-.013a3.774 3.774 0 00-2.083 2.066l-.01.025a5.477 5.477 0 00-.26.992l-.004.034c-.082.482-.13.969-.146 1.457v.02a53.974 53.974 0 00-.044 1.381c-.005.344-.005.848 0 1.512l.007 1.095L1.97 12.1a75.907 75.907 0 000 1.511c.005.344.02.805.043 1.383.018.536.072 1.045.156 1.543l-.01-.067c.065.39.157.735.279 1.066l-.013-.04A3.774 3.774 0 004.49 19.58l.025.01c.291.108.637.2.992.26l.034.004c.43.075.939.128 1.456.146h.02c.577.024 1.038.039 1.382.044.343.005.847.005 1.511 0l1.09-.022 1.095.007c.663.005 1.167.005 1.511 0 .344-.005.805-.02 1.383-.043a11.536 11.536 0 001.542-.156l-.067.01c.39-.065.736-.156 1.066-.278l-.039.012a3.775 3.775 0 002.083-2.066l.009-.024c.109-.292.2-.637.26-.993l.005-.034c.075-.43.128-.939.145-1.456l.001-.019a54.17 54.17 0 00.043-1.382c.005-.344.005-.848 0-1.512l-.007-1.095.008-1.096c.004-.664.004-1.168 0-1.511-.005-.344-.02-.805-.044-1.383a11.536 11.536 0 00-.155-1.542l.009.066a5.736 5.736 0 00-.278-1.066l.013.04a3.774 3.774 0 00-2.066-2.083l-.025-.009a5.477 5.477 0 00-.993-.26l-.034-.005a10.78 10.78 0 00-1.456-.146h-.019a53.976 53.976 0 00-1.382-.044 75.907 75.907 0 00-1.512 0l-1.089.021zM22.002 11c0 2.186-.024 3.7-.073 4.54a6.085 6.085 0 01-6.403 6.387l.014.001c-.84.05-2.353.074-4.54.074-2.186 0-3.7-.025-4.54-.074a6.088 6.088 0 01-6.387-6.403l-.001.015c-.05-.84-.074-2.354-.074-4.54 0-2.187.025-3.7.074-4.54A6.087 6.087 0 016.475.072H6.46C7.3.021 8.814-.003 11-.003c2.187 0 3.7.024 4.54.073a6.087 6.087 0 016.388 6.403V6.46c.05.84.074 2.353.074 4.54z" />
+                            <defs><clipPath id="clip0_406_293"></clipPath></defs>
+                            </svg>
+                    </a>
+                    <a class="link" href="" class="link">
+                        <svg width="31" height="30"  xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_406_291)"><path d="M29.322 7.23a10.757 10.757 0 01-1.363 2.824l.024-.038a149.62 149.62 0 01-2.006 3.235c-.667.966-1.02 1.466-1.059 1.5a1.6 1.6 0 00-.334.773v.008c.03.255.15.491.334.67l.5.557c2.675 2.749 4.18 4.644 4.514 5.685a1.114 1.114 0 01-.14 1.036l.002-.004a1.207 1.207 0 01-.98.361h.005-3.295c-.42 0-.808-.147-1.112-.392l.004.002a8.661 8.661 0 01-1.19-1.185l-.01-.015a36.92 36.92 0 00-1.533-1.643c-1.485-1.412-2.58-2.118-3.287-2.118a.985.985 0 00-.645.169l.003-.003a.958.958 0 00-.2.73v-.005a15.645 15.645 0 00-.047 1.754v-.021 1.449a.975.975 0 01-.333.946v.001a3.974 3.974 0 01-2.022.334l.016.001a10.403 10.403 0 01-5.344-1.585l.044.025a14.914 14.914 0 01-4.646-4.406l-.034-.053a32.951 32.951 0 01-3.089-4.99l-.087-.192A30.824 30.824 0 01.47 9.137l-.075-.23a8.308 8.308 0 01-.388-1.92l-.002-.03c0-.633.371-.948 1.115-.948h3.287c.332-.026.662.074.924.28l-.003-.002c.25.274.435.61.527.985l.003.015a31.774 31.774 0 001.984 4.52l-.084-.172a18.2 18.2 0 002.03 3.22l-.03-.039c.667.818 1.187 1.228 1.56 1.228h.04a.5.5 0 00.434-.25l.001-.002c.12-.313.167-.65.14-.983v.007-4.849a4.014 4.014 0 00-.4-1.583l.01.023a3.695 3.695 0 00-.563-.868l.003.005a1.369 1.369 0 01-.388-.774l-.002-.008c0-.212.098-.403.25-.528l.002-.002a.848.848 0 01.575-.222h5.192a.793.793 0 01.699.277l.001.002a1.7 1.7 0 01.199.953v-.006 6.466c-.02.255.04.51.17.73l-.003-.005a.5.5 0 00.417.223c.212-.014.415-.084.59-.203l-.004.003c.34-.234.632-.5.886-.801l.005-.007a19.514 19.514 0 002.069-2.812l.049-.088c.43-.712.895-1.59 1.316-2.49l.077-.185.558-1.115a1.402 1.402 0 011.396-.948h-.004 3.29c.887 0 1.22.408 1 1.226h-.002z" /></g><defs><clipPath id="clip0_406_291">
+                            <path  transform="translate(.002)" d="M0 0h30v30H0z"/></clipPath></defs></svg>
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
 </main>
