Заканчиваю мобильную версию

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -273,7 +273,7 @@
     </section>
     <section class="map">
         <div class="map-content">
-            <img src="img/image 6.webp" alt="">
+            <img class="map-img" src="img/image 6.webp" alt="">
             <div class="map-block">
                 <h4 class="contakts-text">Контакты</h4>
                 <ul class="list">
