Правка img вставок

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header-page">
-        <img class="header-img" src="../img/pexels-cottonbro-7674492.webp" alt="">
+        <img class="header-img" src="img/pexels-cottonbro-7674492.webp" alt="">
         <div class="navigation">
             <img class="img-top" src="img/Component 1.webp" alt="">
             <img class="img-left" src="img/Component 3.webp" alt="">
@@ -77,7 +77,7 @@
                         <img src="img/pexels-cottonbro-7675416.webp" alt="">
                     </li>
                     <li class="item">
-                        <img src="../img/pexels-leon-ardho-1552252.webp" alt="">
+                        <img src="img/pexels-leon-ardho-1552252.webp" alt="">
                     </li>
                 </ul>
                 <div class="new-right-block">
